--- a/site/about/use-cases/e-23.qmd
+++ b/site/about/use-cases/e-23.qmd
@@ -38,13 +38,13 @@ Enhanced requirements for model interpretability ensure stakeholders can underst
 
 **Implementation steps:**
 
-1. Configure documentation templates to capture explainability information
+1. Configure documentation templates to capture explainability information.
 
-2. Run interpretability tests to generate explanations
+2. Run interpretability tests to generate explanations.
 
-3. Document the level of explainability appropriate for model risk tier
+3. Document the level of explainability appropriate for model risk tier.
 
-4. Establish processes for explaining decisions to affected parties
+4. Establish processes for explaining decisions to affected parties.
 
 
 ::: {.callout title="Related documentation"}
@@ -58,13 +58,13 @@ Compensating controls for "black box" approaches where full interpretability is 
 
 **Implementation steps:**
 
-1. Document the rationale for using less interpretable models
+1. Document the rationale for using less interpretable models.
 
-2. Implement enhanced monitoring as a compensating control
+2. Implement enhanced monitoring as a compensating control.
 
-3. Establish human oversight requirements
+3. Establish human oversight requirements.
 
-4. Configure alerts for unexpected model behavior
+4. Configure alerts for unexpected model behavior.
 
 ::: {.callout title="Related documentation"}
 - [Set up ongoing monitoring](/guide/monitoring/set-up-ongoing-monitoring.qmd)
@@ -77,13 +77,13 @@ Evaluation of ethical implications and discrimination risks in AI models.
 
 **Implementation steps:**
 
-1. Run fairness and bias tests during development
+1. Run fairness and bias tests during development.
 
-2. Document bias assessment methodology
+2. Document bias assessment methodology.
 
-3. Establish thresholds for acceptable bias levels
+3. Establish thresholds for acceptable bias levels.
 
-4. Implement ongoing bias monitoring
+4. Implement ongoing bias monitoring.
 
 ::: {.callout title="Related documentation"}
 - [Run tests](/developer/model-testing/run-tests.qmd)
@@ -96,13 +96,13 @@ Governance for self-learning capabilities and automated decisions.
 
 **Implementation steps:**
 
-1. Document the scope of autonomous decision-making
+1. Document the scope of autonomous decision-making.
 
-2. Establish human oversight requirements
+2. Establish human oversight requirements.
 
-3. Configure review workflows for autonomous decisions
+3. Configure review workflows for autonomous decisions.
 
-4. Implement safeguards and intervention mechanisms
+4. Implement safeguards and intervention mechanisms.
 
 ::: {.callout title="Related documentation"}
 - [Configure workflows](/guide/workflows/configure-workflows.qmd)
@@ -114,13 +114,13 @@ Monitoring for performance degradation over time.
 
 **Implementation steps:**
 
-1. Configure ongoing monitoring for drift detection
+1. Configure ongoing monitoring for drift detection.
 
-2. Set up alerts for performance degradation
+2. Set up alerts for performance degradation.
 
-3. Establish thresholds for re-validation triggers
+3. Establish thresholds for re-validation triggers.
 
-4. Document drift monitoring methodology
+4. Document drift monitoring methodology.
 
 ::: {.callout title="Related documentation"}
 - [Set up ongoing monitoring](/guide/monitoring/set-up-ongoing-monitoring.qmd)
@@ -132,13 +132,13 @@ Management of continuously updating models.
 
 **Implementation steps:**
 
-1. Document model update frequency and methodology
+1. Document model update frequency and methodology.
 
-2. Establish change control for model updates
+2. Establish change control for model updates.
 
-3. Configure validation requirements for dynamic models
+3. Configure validation requirements for dynamic models.
 
-4. Implement rollback procedures
+4. Implement rollback procedures.
 
 ::: {.callout title="Related documentation"}
 - [Configure workflows](/guide/workflows/configure-workflows.qmd)
