--- a/site/about/use-cases/model-risk-management.qmd
+++ b/site/about/use-cases/model-risk-management.qmd
@@ -74,11 +74,11 @@ The Guideline on Enterprise-Wide Model Risk Management for Deposit-Taking Instit
 
 {{< var vm.product >}} supports MRM workflows through:
 
-- **Model inventory** — Track all models with customizable fields for materiality, tiering, and risk rating
-- **Documentation automation** — Generate model documentation through configurable templates and automated testing
-- **Validation workflows** — Configure independent validation processes with findings tracking
-- **Three lines of defense** — Support role separation for developers, validators, and auditors
-- **Ongoing monitoring** — Monitor model performance with alerts and drift detection
+- **Model inventory** — Track all models with customizable fields for materiality, tiering, and risk rating.
+- **Documentation automation** — Generate model documentation through configurable templates and automated testing.
+- **Validation workflows** — Configure independent validation processes with findings tracking.
+- **Three lines of defense** — Support role separation for developers, validators, and auditors.
+- **Ongoing monitoring** — Monitor model performance with alerts and drift detection.
 
 ::: {.attn}
 
