--- a/site/about/use-cases/sr-11-7.qmd
+++ b/site/about/use-cases/sr-11-7.qmd
@@ -27,21 +27,21 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
 
 1. **Establish model definition criteria**
 
-   - Define what constitutes a model in your organization
-   - Document inclusion and exclusion criteria
-   - Classify models by type and purpose
+   - Define what constitutes a model in your organization.
+   - Document inclusion and exclusion criteria.
+   - Classify models by type and purpose.
 
 2. **Configure inventory fields**
 
-   - Set up materiality and tiering fields
-   - Add fields for model purpose and business use
-   - Configure risk rating classifications
+   - Set up materiality and tiering fields.
+   - Add fields for model purpose and business use.
+   - Configure risk rating classifications.
 
 3. **Populate the inventory**
 
-   - Register existing models
-   - Document model ownership and stakeholders
-   - Track model lifecycle status
+   - Register existing models.
+   - Document model ownership and stakeholders.
+   - Track model lifecycle status.
 
 ::: {.callout title="Related documentation"}
 - [Work with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)
@@ -58,26 +58,26 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
 
 1. **Configure documentation templates**
 
-   - Select or create templates aligned to SR 11-7
-   - Include sections for purpose, design, theory, and logic
+   - Select or create templates aligned to SR 11-7.
+   - Include sections for purpose, design, theory, and logic.
 
 2. **Document purpose, design, theory, and logic**
 
-   - Clearly state the model's intended use
-   - Document the theoretical basis
-   - Explain design choices and methodology
+   - Clearly state the model's intended use.
+   - Document the theoretical basis.
+   - Explain design choices and methodology.
 
 3. **Document data quality and relevance**
 
-   - Assess and document data sources
-   - Evaluate data quality and limitations
-   - Document data transformations
+   - Assess and document data sources.
+   - Evaluate data quality and limitations.
+   - Document data transformations.
 
 4. **Track assumptions and limitations**
 
-   - Document all model assumptions
-   - Identify known limitations
-   - Establish conditions under which the model should not be used
+   - Document all model assumptions.
+   - Identify known limitations.
+   - Establish conditions under which the model should not be used.
 
 ::: {.callout title="Related documentation"}
 - [Work with document templates](/guide/templates/working-with-document-templates.qmd)
@@ -94,21 +94,21 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
 
 1. **Run automated testing**
 
-   - Execute accuracy tests
-   - Run robustness and stability tests
-   - Document test results
+   - Execute accuracy tests.
+   - Run robustness and stability tests.
+   - Document test results.
 
 2. **Perform sensitivity analysis and benchmarking**
 
-   - Test model sensitivity to input changes
-   - Compare against benchmarks or challenger models
-   - Document performance boundaries
+   - Test model sensitivity to input changes.
+   - Compare against benchmarks or challenger models.
+   - Document performance boundaries.
 
 3. **Evaluate limitations and assumptions**
 
-   - Test assumption validity
-   - Identify conditions where performance degrades
-   - Document testing coverage
+   - Test assumption validity.
+   - Identify conditions where performance degrades.
+   - Document testing coverage.
 
 ::: {.callout title="Related documentation"}
 - [Run tests](/developer/model-testing/run-tests.qmd)
@@ -125,21 +125,21 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
 
 1. **Configure validation workflows**
 
-   - Set up validation initiation triggers
-   - Define validation scope and requirements
-   - Establish independence requirements
+   - Set up validation initiation triggers.
+   - Define validation scope and requirements.
+   - Establish independence requirements.
 
 2. **Prepare validation reports**
 
-   - Use validation report templates
-   - Document validation activities
-   - Summarize findings and conclusions
+   - Use validation report templates.
+   - Document validation activities.
+   - Summarize findings and conclusions.
 
 3. **Track findings and remediation**
 
-   - Document validation findings
-   - Assign remediation owners
-   - Track remediation progress
+   - Document validation findings.
+   - Assign remediation owners.
+   - Track remediation progress.
 
 ::: {.callout title="Related documentation"}
 - [Prepare validation reports](/guide/model-validation/preparing-validation-reports.qmd)
@@ -156,21 +156,21 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
 
 1. **Set up monitoring workflows**
 
-   - Configure monitoring frequency
-   - Define monitoring metrics
-   - Establish escalation procedures
+   - Configure monitoring frequency.
+   - Define monitoring metrics.
+   - Establish escalation procedures.
 
 2. **Configure performance tracking and alerts**
 
-   - Set up performance dashboards
-   - Configure threshold-based alerts
-   - Document alert response procedures
+   - Set up performance dashboards.
+   - Configure threshold-based alerts.
+   - Document alert response procedures.
 
 3. **Schedule periodic reviews**
 
-   - Establish review frequency by model tier
-   - Configure review reminders
-   - Document review requirements
+   - Establish review frequency by model tier.
+   - Configure review reminders.
+   - Document review requirements.
 
 ::: {.callout title="Related documentation"}
 - [Set up ongoing monitoring](/guide/monitoring/set-up-ongoing-monitoring.qmd)
@@ -187,21 +187,21 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
 
 1. **Configure role-based access**
 
-   - Set up roles for three lines of defense
-   - Configure permissions by role
-   - Ensure appropriate segregation of duties
+   - Set up roles for three lines of defense.
+   - Configure permissions by role.
+   - Ensure appropriate segregation of duties.
 
 2. **Configure approval workflows**
 
-   - Set up model approval processes
-   - Define approval authorities
-   - Configure escalation paths
+   - Set up model approval processes.
+   - Define approval authorities.
+   - Configure escalation paths.
 
 3. **Enable audit trail and compliance reporting**
 
-   - Configure activity logging
-   - Set up compliance dashboards
-   - Generate audit reports
+   - Configure activity logging.
+   - Set up compliance dashboards.
+   - Generate audit reports.
 
 ::: {.callout title="Related documentation"}
 - [Manage permissions](/guide/configuration/manage-permissions.qmd)
