--- a/site/about/use-cases/ss1-23.qmd
+++ b/site/about/use-cases/ss1-23.qmd
@@ -31,21 +31,21 @@ The regulation encourages **proportionate application** based on the size and co
 
 1. **Define model identification criteria**
 
-   - Document what constitutes a model
-   - Establish criteria for inclusion in the MRM framework
-   - Consider edge cases (spreadsheets, vendor models, etc.)
+   - Document what constitutes a model.
+   - Establish criteria for inclusion in the MRM framework.
+   - Consider edge cases (spreadsheets, vendor models, etc.).
 
 2. **Configure risk classification and tiering fields**
 
-   - Set up model tier fields (e.g., Tier 1, 2, 3)
-   - Add risk classification categories
-   - Configure validation based on tier
+   - Set up model tier fields (e.g., Tier 1, 2, 3).
+   - Add risk classification categories.
+   - Configure validation based on tier.
 
 3. **Document materiality and complexity factors**
 
-   - Establish materiality thresholds
-   - Document complexity assessment criteria
-   - Link complexity to governance requirements
+   - Establish materiality thresholds.
+   - Document complexity assessment criteria.
+   - Link complexity to governance requirements.
 
 ::: {.callout title="Related documentation"}
 - [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
@@ -62,21 +62,21 @@ The regulation encourages **proportionate application** based on the size and co
 
 1. **Configure Senior Management Function (SMF) accountability**
 
-   - Document SMF responsibilities for MRM
-   - Configure approval authorities
-   - Establish escalation paths to senior management
+   - Document SMF responsibilities for MRM.
+   - Configure approval authorities.
+   - Establish escalation paths to senior management.
 
 2. **Configure roles and responsibilities**
 
-   - Define roles across three lines of defense
-   - Document responsibilities for each role
-   - Configure permissions accordingly
+   - Define roles across three lines of defense.
+   - Document responsibilities for each role.
+   - Configure permissions accordingly.
 
 3. **Set up board oversight dashboards**
 
-   - Create executive-level dashboards
-   - Configure key risk indicators
-   - Establish board reporting cadence
+   - Create executive-level dashboards.
+   - Configure key risk indicators.
+   - Establish board reporting cadence.
 
 ::: {.callout title="Related documentation"}
 - [Manage permissions](/guide/configuration/manage-permissions.qmd)
@@ -94,21 +94,21 @@ The regulation encourages **proportionate application** based on the size and co
 
 1. **Configure documentation templates aligned to SS1/23**
 
-   - Select or create templates covering SS1/23 requirements
-   - Include sections for intended purpose and use boundaries
-   - Document development methodology
+   - Select or create templates covering SS1/23 requirements.
+   - Include sections for intended purpose and use boundaries.
+   - Document development methodology.
 
 2. **Enforce development standards**
 
-   - Document coding and development standards
-   - Configure quality gates in workflows
-   - Track compliance with standards
+   - Document coding and development standards.
+   - Configure quality gates in workflows.
+   - Track compliance with standards.
 
 3. **Document use case and limitations**
 
-   - Clearly state intended use cases
-   - Document known limitations
-   - Establish use boundaries
+   - Clearly state intended use cases.
+   - Document known limitations.
+   - Establish use boundaries.
 
 ::: {.callout title="Related documentation"}
 - [Work with document templates](/guide/templates/working-with-document-templates.qmd)
@@ -125,21 +125,21 @@ The regulation encourages **proportionate application** based on the size and co
 
 1. **Configure validation workflow for effective challenge**
 
-   - Set up validation initiation workflows
-   - Ensure validator independence
-   - Define validation scope by model tier
+   - Set up validation initiation workflows.
+   - Ensure validator independence.
+   - Define validation scope by model tier.
 
 2. **Document objective assessment**
 
-   - Use validation report templates
-   - Document testing methodology
-   - Provide clear conclusions
+   - Use validation report templates.
+   - Document testing methodology.
+   - Provide clear conclusions.
 
 3. **Implement findings and remediation workflows**
 
-   - Track validation findings
-   - Assign remediation owners
-   - Monitor remediation progress
+   - Track validation findings.
+   - Assign remediation owners.
+   - Monitor remediation progress.
 
 ::: {.callout title="Related documentation"}
 - [Prepare validation reports](/guide/model-validation/preparing-validation-reports.qmd)
@@ -156,21 +156,21 @@ The regulation encourages **proportionate application** based on the size and co
 
 1. **Document controls**
 
-   - Identify and document model controls
-   - Link controls to risks mitigated
-   - Track control effectiveness
+   - Identify and document model controls.
+   - Link controls to risks mitigated.
+   - Track control effectiveness.
 
 2. **Configure monitoring and alerts**
 
-   - Set up ongoing monitoring
-   - Configure performance alerts
-   - Establish response procedures
+   - Set up ongoing monitoring.
+   - Configure performance alerts.
+   - Establish response procedures.
 
 3. **Implement change management workflows**
 
-   - Configure model change workflows
-   - Document change approval requirements
-   - Track change history
+   - Configure model change workflows.
+   - Document change approval requirements.
+   - Track change history.
 
 ::: {.callout title="Related documentation"}
 - [Set up ongoing monitoring](/guide/monitoring/set-up-ongoing-monitoring.qmd)
@@ -187,21 +187,21 @@ SS1/23 specifically addresses emerging technologies. {{< var vm.product >}} help
 
 1. **Implement additional controls for complex models**
 
-   - Document enhanced validation requirements for ML models
-   - Implement interpretability documentation
-   - Configure enhanced monitoring
+   - Document enhanced validation requirements for ML models.
+   - Implement interpretability documentation.
+   - Configure enhanced monitoring.
 
 2. **Address dynamic adjustments and change management**
 
-   - Document model update procedures
-   - Implement change tracking for dynamic models
-   - Configure validation triggers for model updates
+   - Document model update procedures.
+   - Implement change tracking for dynamic models.
+   - Configure validation triggers for model updates.
 
 3. **Document explainability and transparency**
 
-   - Assess explainability requirements by model type
-   - Document interpretability approaches
-   - Implement transparency controls
+   - Assess explainability requirements by model type.
+   - Document interpretability approaches.
+   - Implement transparency controls.
 
 ::: {.callout title="Related documentation"}
 - [LLM features](/about/overview-llm-features.qmd)
@@ -214,9 +214,9 @@ SS1/23 specifically addresses emerging technologies. {{< var vm.product >}} help
 
 SS1/23 emphasizes proportionate application. Consider:
 
-- **Smaller institutions** — May apply simplified governance structures while maintaining core principles
-- **Complex institutions** — Require more sophisticated frameworks and controls
-- **Model tiering** — Higher-tier models warrant more intensive oversight
+- **Smaller institutions** — May apply simplified governance structures while maintaining core principles.
+- **Complex institutions** — Require more sophisticated frameworks and controls.
+- **Model tiering** — Higher-tier models warrant more intensive oversight.
 
 Document your proportionality assessment and how it influences your MRM framework design.
 
