Put use cases under umbrella categories

--- a/site/about/product-features.qmd
+++ b/site/about/product-features.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Product features"
+title: "{{< var validmind.developer >}} and {{< var validmind.platform >}}"
 date: last-modified
 listing:
   - id: product-features
