Consistency edits, content improvements

--- a/site/about/use-cases/ai-governance.qmd
+++ b/site/about/use-cases/ai-governance.qmd
@@ -4,12 +4,17 @@ date: last-modified
 listing:
   - id: ai-governance-next-steps
     type: grid
-    grid-columns: 2
     max-description-length: 250
+    grid-columns: 2
     sort: false
+    fields: [title, description]
     contents:
-    - ../training/ai-governance/ai-governance-register.qmd
-    - eu-ai-act.qmd
+      title: "EU AI Act implementation guide"
+      description: "Implement EU AI Act compliance using {{< var vm.product >}}."
+    - path: eu-ai-act.qmd
+      title: "AI governance training"
+      description: "Learn how to use {{< var vm.product >}} for AI governance to establish organizational oversight for AI systems, manage use cases through their lifecycle, and ensure compliance with regulations like the EU AI Act."
+    - path: ../../training/ai-governance/ai-governance-register.qmd
 ---
 
 AI governance is the organizational framework for directing and overseeing how AI is designed, deployed, and used. It sets policy, accountability, and decision rights, covering ethics, compliance, risk appetite, lifecycle controls, and ongoing oversight across people, process, and technology.
@@ -18,20 +23,32 @@ AI governance is the organizational framework for directing and overseeing how A
 
 AI governance addresses several key areas:
 
+:::: {.columns}
+
+::: {.column width="50%" .pr3}
+
 Accountability and ownership
 : Define clear ownership for AI systems, including use case owners, business sponsors, and oversight committees responsible for decisions about AI deployment.
 
-Acceptable use and ethical constraints
+Acceptable use and ethical constraints 
 : Establish policies governing what AI can and cannot be used for, including ethical boundaries, prohibited applications, and acceptable risk levels.
 
 Human oversight and operational controls
 : Implement controls ensuring human involvement in AI-driven decisions, especially for high-risk or consequential outcomes.
+
+:::
+
+::: {.column width="50%" .pl3}
 
 Compliance and regulatory readiness
 : Align AI usage with applicable regulations such as the EU AI Act, ensuring documentation, transparency, and audit readiness.
 
 Lifecycle controls for deployment and change
 : Govern how AI systems move from development to production, including intake processes, approval gates, and change management.
+
+:::
+
+::::
 
 ## Typical artifacts
 
@@ -67,7 +84,7 @@ flowchart TB
     center --- lib
 ```
 
-:::::: {.columns}
+:::: {.columns}
 
 ::: {.column width="50%" .pr3}
 
@@ -88,7 +105,7 @@ Includes internal policies, external regulations, and compliance frameworks.
 ::: {.column width="50%" .pl3}
 
 **Dependencies**  
-Maps data sources, model relationships, and interconnected systems.
+Maps data sources, LLM relationships, and interconnected systems.
 
 **Lifecycle**  
 Governs development, deployment, monitoring, and retirement stages.
@@ -98,7 +115,31 @@ Offers reusable components, a knowledge base, and additional resources.
 
 :::
 
-::::::
+::::
+
+### Model your AI inventory
+
+Configure **primary record types** to match how your organization actually manages AI — whether that's an entire AI systems, the underlying large-language models (LLMs), use cases, tools, applications, data assets, or a combination thereof:
+
+- Define custom record types beyond just large-language models.
+- Add fields for risk classification, ownership, and business context.
+- Capture the metadata that matters for your governance program.
+
+### Include relationships and dependencies
+
+Create **typed relationships** between records to map how AI components connect and depend on each other:
+
+- Link AI systems to underlying LLMs, data sources, and applications.
+- Visualize dependencies across your AI portfolio.
+- Inherit properties and requirements through relationships.
+
+### Drive governance based on change and materiality
+
+Use **version-aware workflows** that differentiate between major and minor changes, triggering appropriate validation and approvals:
+
+- Configure workflows that respond to change severity.
+- Automate approval routing based on materiality.
+- Track version history with full audit trail.
 
 ::: {.attn}
 
@@ -107,4 +148,6 @@ Offers reusable components, a knowledge base, and additional resources.
 Explore our implementation guides for specific regulatory frameworks:
 
 :::{.use-case-listing}
+:::
+
 :::
