--- a/site/about/use-cases/e-23.qmd
+++ b/site/about/use-cases/e-23.qmd
@@ -36,7 +36,7 @@ E-23 introduces enhanced requirements for AI and ML models. {{< var vm.product >
 
 Enhanced requirements for model interpretability ensure stakeholders can understand AI-driven decisions.
 
-**Implementation steps:**
+#### Steps
 
 1. Configure documentation templates to capture explainability information.
 
@@ -56,7 +56,7 @@ Enhanced requirements for model interpretability ensure stakeholders can underst
 
 Compensating controls for "black box" approaches where full interpretability is not achievable.
 
-**Implementation steps:**
+#### Steps
 
 1. Document the rationale for using less interpretable models.
 
@@ -75,7 +75,7 @@ Compensating controls for "black box" approaches where full interpretability is 
 
 Evaluation of ethical implications and discrimination risks in AI models.
 
-**Implementation steps:**
+#### Steps
 
 1. Run fairness and bias tests during development.
 
@@ -94,7 +94,7 @@ Evaluation of ethical implications and discrimination risks in AI models.
 
 Governance for self-learning capabilities and automated decisions.
 
-**Implementation steps:**
+#### Steps
 
 1. Document the scope of autonomous decision-making.
 
@@ -112,7 +112,7 @@ Governance for self-learning capabilities and automated decisions.
 
 Monitoring for performance degradation over time.
 
-**Implementation steps:**
+#### Steps
 
 1. Configure ongoing monitoring for drift detection.
 
@@ -130,7 +130,7 @@ Monitoring for performance degradation over time.
 
 Management of continuously updating models.
 
-**Implementation steps:**
+#### Steps
 
 1. Document model update frequency and methodology.
 
