--- a/site/about/use-cases/model-risk-management.qmd
+++ b/site/about/use-cases/model-risk-management.qmd
@@ -18,17 +18,29 @@ Model risk management (MRM) is a discipline focused on managing risk from models
 
 MRM addresses several key areas:
 
+:::: {.columns}
+
+::: {.column width="50%" .pr3}
+
 Development and documentation standards
 : Establish clear standards for model development, including documentation of purpose, design, theory, and logic.
 
 Independent validation and challenge
 : Ensure models undergo rigorous independent validation to identify limitations and verify performance.
 
+:::
+
+::: {.column width="50%" .pl3}
+
 Performance monitoring and drift
 : Monitor model performance over time, detecting drift and degradation that may affect reliability.
 
 Change control and remediation
 : Manage model changes through controlled processes, tracking findings and remediation actions.
+
+:::
+
+::::
 
 ## Typical artifacts
 
@@ -40,27 +52,104 @@ MRM programs produce documentation that demonstrates sound practices:
 - **Findings** — Issues identified during validation with remediation tracking
 - **Monitoring evidence** — Ongoing performance metrics and drift analysis
 
+## Using {{< var vm.product >}} for MRM
+
+{{< var vm.product >}} supports MRM workflows through a unified platform:
+
+```{mermaid}
+flowchart TB
+    center((Model Risk<br>Management))
+    
+    inv((Model<br>Inventory))
+    docs((Documentation<br>Automation))
+    val((Validation<br>Workflows))
+    lod((Three Lines<br>of Defense))
+    mon((Ongoing<br>Monitoring))
+    life((Lifecycle))
+    
+    center --- inv
+    center --- docs
+    center --- val
+    center --- lod
+    center --- mon
+    center --- life
+```
+
+Model inventory
+: Track all models with customizable fields for materiality, tiering, and risk rating.
+
+Documentation automation
+: Generate model documentation through configurable templates and automated testing.
+
+Validation workflows
+: Configure independent validation processes with findings tracking.
+
+Three lines of defense
+: Support role separation for developers, validators, and auditors.
+
+Ongoing monitoring
+: Monitor model performance with alerts and drift detection.
+
+Lifecycle
+: Govern model development, deployment, monitoring, and retirement stages.
+
 ## Regulatory frameworks
 
 {{< var vm.product >}} is designed to help organizations comply with MRM regulatory requirements:
 
 ### SR 11-7 (United States)
 
-The Supervisory Guidance on model risk management issued by the Board of Governors of the Federal Reserve System and the Office of the Comptroller of the Currency. It provides comprehensive guidance on developing and maintaining a robust MRM framework.
+:::: {.columns}
+
+::: {.column width="50%" .pr3}
+
+The Supervisory Guidance on model risk management was issued by the Board of Governors of the Federal Reserve System and the Office of the Comptroller of the Currency. It provides comprehensive guidance on designing and maintaining a robust MRM framework.
+
+:::
+
+::: {.column width="50%" .pl3}
 
 [SR 11-7 implementation guide](sr-11-7.qmd){.button}
 
+:::
+
+::::
+
 ### SS1/23 (United Kingdom)
 
-The Model Risk Management Principles for Banks issued by the Prudential Regulation Authority. It outlines principles for managing model risk effectively with emphasis on strategic planning and technical capabilities.
+:::: {.columns}
+
+::: {.column width="50%" .pr3}
+
+The Model Risk Management Principles for Banks, issued by the Prudential Regulation Authority (PRA), set out comprehensive expectations for managing model risk in UK banks. The principles emphasize governance, strategic planning, model development, validation, and robust technical capabilities.
+
+:::
+
+::: {.column width="50%" .pl3}
 
 [SS1/23 implementation guide](ss1-23.qmd){.button}
 
+:::
+
+::::
+
 ### E-23 (Canada)
 
-The Guideline on Enterprise-Wide Model Risk Management for Deposit-Taking Institutions issued by OSFI. It outlines minimum prudent practices for model development, review, approval, use, and modification with forward-looking AI/ML considerations.
+:::: {.columns}
+
+::: {.column width="50%" .pr3}
+
+The Office of the Superintendent of Financial Institutions (OSFI) issued the Guideline on Enterprise-Wide Model Risk Management (E-23) for Deposit-Taking Institutions in Canada. E-23 sets out prudent practices for model development, validation, approval, use, and ongoing change management, including considerations for AI and machine learning models.
+
+:::
+
+::: {.column width="50%" .pl3}
 
 [E-23 implementation guide](e-23.qmd){.button}
+
+:::
+
+::::
 
 ### Other frameworks
 
@@ -69,16 +158,6 @@ The Guideline on Enterprise-Wide Model Risk Management for Deposit-Taking Instit
 - **FSA Japan** — Principles for Model Risk Management
 - **ECB** — Guide to internal models
 - Regional and industry-specific requirements
-
-## Using {{< var vm.product >}} for MRM
-
-{{< var vm.product >}} supports MRM workflows through:
-
-- **Model inventory** — Track all models with customizable fields for materiality, tiering, and risk rating.
-- **Documentation automation** — Generate model documentation through configurable templates and automated testing.
-- **Validation workflows** — Configure independent validation processes with findings tracking.
-- **Three lines of defense** — Support role separation for developers, validators, and auditors.
-- **Ongoing monitoring** — Monitor model performance with alerts and drift detection.
 
 ::: {.attn}
 
