--- a/site/about/use-cases/sr-11-7.qmd
+++ b/site/about/use-cases/sr-11-7.qmd
@@ -9,11 +9,11 @@ SR 11-7 (Supervisory Guidance on Model Risk Management) was issued by the Board 
 
 SR 11-7 establishes expectations across three main areas:
 
-1. **Model development, implementation, and use**
+1. Model development, implementation, and use
 
-2. **Model validation**
+2. Model validation
 
-3. **Governance, policies, and controls**
+3. Governance, policies, and controls
 
 The guidance emphasizes the three lines of defense model and the concept of "effective challenge" — ensuring models are rigorously questioned and tested.
 
@@ -25,19 +25,19 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
 
 ### Steps
 
-1. **Establish model definition criteria**
+1. Establish model definition criteria:
 
    - Define what constitutes a model in your organization.
    - Document inclusion and exclusion criteria.
    - Classify models by type and purpose.
 
-2. **Configure inventory fields**
+2. Configure inventory fields:
 
    - Set up materiality and tiering fields.
    - Add fields for model purpose and business use.
    - Configure risk rating classifications.
 
-3. **Populate the inventory**
+3. Populate the inventory:
 
    - Register existing models.
    - Document model ownership and stakeholders.
@@ -56,24 +56,24 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
 
 ### Steps
 
-1. **Configure documentation templates**
+1. Configure documentation templates:
 
    - Select or create templates aligned to SR 11-7.
    - Include sections for purpose, design, theory, and logic.
 
-2. **Document purpose, design, theory, and logic**
+2. Document purpose, design, theory, and logic:
 
    - Clearly state the model's intended use.
    - Document the theoretical basis.
    - Explain design choices and methodology.
 
-3. **Document data quality and relevance**
+3. Document data quality and relevance:
 
    - Assess and document data sources.
    - Evaluate data quality and limitations.
    - Document data transformations.
 
-4. **Track assumptions and limitations**
+4. Track assumptions and limitations:
 
    - Document all model assumptions.
    - Identify known limitations.
@@ -92,19 +92,19 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
 
 ### Steps
 
-1. **Run automated testing**
+1. Run automated testing:
 
    - Execute accuracy tests.
    - Run robustness and stability tests.
    - Document test results.
 
-2. **Perform sensitivity analysis and benchmarking**
+2. Perform sensitivity analysis and benchmarking:
 
    - Test model sensitivity to input changes.
    - Compare against benchmarks or challenger models.
    - Document performance boundaries.
 
-3. **Evaluate limitations and assumptions**
+3. Evaluate limitations and assumptions:
 
    - Test assumption validity.
    - Identify conditions where performance degrades.
@@ -123,19 +123,19 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
 
 ### Steps
 
-1. **Configure validation workflows**
+1. Configure validation workflows:
 
    - Set up validation initiation triggers.
    - Define validation scope and requirements.
    - Establish independence requirements.
 
-2. **Prepare validation reports**
+2. Prepare validation reports:
 
    - Use validation report templates.
    - Document validation activities.
    - Summarize findings and conclusions.
 
-3. **Track findings and remediation**
+3. Track findings and remediation:
 
    - Document validation findings.
    - Assign remediation owners.
@@ -154,19 +154,19 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
 
 ### Steps
 
-1. **Set up monitoring workflows**
+1. Set up monitoring workflows
 
    - Configure monitoring frequency.
    - Define monitoring metrics.
    - Establish escalation procedures.
 
-2. **Configure performance tracking and alerts**
+2. Configure performance tracking and alerts
 
    - Set up performance dashboards.
    - Configure threshold-based alerts.
    - Document alert response procedures.
 
-3. **Schedule periodic reviews**
+3. Schedule periodic reviews
 
    - Establish review frequency by model tier.
    - Configure review reminders.
@@ -185,19 +185,19 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
 
 ### Steps
 
-1. **Configure role-based access**
+1. Configure role-based access
 
    - Set up roles for three lines of defense.
    - Configure permissions by role.
    - Ensure appropriate segregation of duties.
 
-2. **Configure approval workflows**
+2. Configure approval workflows
 
    - Set up model approval processes.
    - Define approval authorities.
    - Configure escalation paths.
 
-3. **Enable audit trail and compliance reporting**
+3. Enable audit trail and compliance reporting
 
    - Configure activity logging.
    - Set up compliance dashboards.
