--- a/site/about/use-cases/eu-ai-act.qmd
+++ b/site/about/use-cases/eu-ai-act.qmd
@@ -3,7 +3,9 @@ title: "EU AI Act"
 date: last-modified
 ---
 
-This guide provides detailed, step-by-step guidance on implementing EU AI Act compliance using {{< var vm.product >}}. The documentation will:
+This guide provides detailed, step-by-step guidance on implementing EU AI Act compliance using {{< var vm.product >}}. 
+
+The documentation will:
 
 1. Walk you through the practical steps required to implement what is shown in the demo.
 
@@ -41,18 +43,15 @@ The EU AI Act requirements overlap with existing model risk management framework
 
 ### Steps
 
-1. **Complete the risk classification questionnaire**
-
+1. Complete the risk classification questionnaire:
    - Configure custom inventory fields to capture EU AI Act risk classification.
    - Set up fields for prohibited, high-risk, limited-risk, and minimal-risk categories.
 
-2. **Map fields to EU AI Act requirements**
-
+2. Map fields to EU AI Act requirements:
    - Create custom fields aligned to Article 9 requirements.
    - Document risk assessment criteria and thresholds.
 
-3. **Set up custom workflows for different risk levels**
-
+3. Set up custom workflows for different risk levels:
    - Configure approval workflows based on risk classification.
    - High-risk systems require additional review gates.
 
@@ -69,23 +68,19 @@ The EU AI Act requirements overlap with existing model risk management framework
 
 ### Steps
 
-1. **Initialize the {{< var vm.developer >}}**
-
+1. Initialize the {{< var vm.developer >}}:
    - Set up the developer environment for data quality testing.
    - Connect to your data sources.
 
-2. **Implement out-of-the-box data quality tests**
-
+2. Implement out-of-the-box data quality tests:
    - Run automated tests for data completeness, accuracy, and relevance.
    - Document data quality metrics.
 
-3. **Create custom tests for your specific data requirements**
-
+3. Create custom tests for your specific data requirements:
    - Extend the test framework for domain-specific quality checks.
    - Implement bias detection tests.
 
-4. **Centralize governance for oversight**
-
+4. Centralize governance for oversight:
    - Configure dashboards to monitor data quality across systems.
    - Set up alerts for data quality issues.
 
@@ -102,28 +97,23 @@ The EU AI Act requirements overlap with existing model risk management framework
 
 ### Steps
 
-1. **Work with documentation templates**
-
+1. Work with documentation templates:
    - Select or create templates aligned to EU AI Act requirements.
    - Configure sections for system description, design, and compliance.
 
-2. **Discover and use tests**
-
+2. Discover and use tests:
    - Map available tests to Article 11 documentation requirements.
    - Run tests to generate evidence
 
-3. **Customize sections for specific use cases**
-
+3. Customize sections for specific use cases:
    - Add custom sections for AI system-specific requirements.
    - Document intended purpose, design choices, and limitations.
 
-4. **Leverage AI-assisted documentation features**
-
+4. Leverage AI-assisted documentation features:
    - Use document generation to accelerate documentation.
    - Review and refine AI-generated content.
 
-5. **Add content blocks**
-
+5. Add content blocks:
    - Insert additional evidence and documentation, as needed.
    - Link artifacts to documentation sections.
 
@@ -140,28 +130,23 @@ The EU AI Act requirements overlap with existing model risk management framework
 
 ### Steps
 
-1. **Prepare validation reports**
-
+1. Prepare validation reports:
    - Set up validation report templates
    - Configure validation workflows
 
-2. **Link evidence to compliance requirements**
-
+2. Link evidence to compliance requirements:
    - Map test results to Article 15 requirements
    - Document accuracy metrics and thresholds
 
-3. **Create and document challenger models**
-
+3. Create and document challenger models:
    - Implement challenger model workflows
    - Compare performance across models
 
-4. **Record findings and remediations**
-
+4. Record findings and remediations:
    - Track validation findings
    - Document remediation actions
 
-5. **Assess compliance**
-
+5. Assess compliance:
    - Generate compliance summaries
    - Review against Article 15 criteria
 
@@ -178,15 +163,15 @@ The EU AI Act requirements overlap with existing model risk management framework
 
 ### Steps
 
-1. **Work with analytics for non-technical stakeholders**
+1. Work with analytics for non-technical stakeholders:
    - Configure dashboards for business users
    - Create accessible summaries of AI system behavior
 
-2. **Set up custom dashboards**
+2. Set up custom dashboards:
    - Build dashboards showing key transparency metrics
    - Include interpretability information
 
-3. **Set up decision explanation frameworks**
+3. Set up decision explanation frameworks:
    - Document how AI systems make decisions
    - Implement explainability features
 
@@ -203,19 +188,19 @@ The EU AI Act requirements overlap with existing model risk management framework
 
 ### Steps
 
-1. **Configure ongoing monitoring**
+1. Configure ongoing monitoring:
    - Set up monitoring workflows
    - Define monitoring metrics and thresholds
 
-2. **Set up alerts and thresholds**
+2. Set up alerts and thresholds:
    - Configure alerts for performance degradation
    - Establish escalation procedures
 
-3. **Create human review workflows**
+3. Create human review workflows:
    - Implement review gates for high-risk decisions
    - Document human-in-the-loop processes
 
-4. **Document intervention processes**
+4. Document intervention processes:
    - Define procedures for human override
    - Track intervention decisions
 
@@ -232,19 +217,19 @@ The EU AI Act requirements overlap with existing model risk management framework
 
 ### Steps
 
-1. **Set up the conformity assessment process (Article 43)**
+1. Set up the conformity assessment process (Article 43):
    - Configure end-to-end compliance workflows
    - Document conformity assessment procedures
 
-2. **Register high-risk systems (Article 60)**
+2. Register high-risk systems (Article 60):
    - Maintain EU database registration information
    - Track registration status
 
-3. **Implement post-market monitoring (Article 61)**
+3. Implement post-market monitoring (Article 61):
    - Set up ongoing monitoring for deployed systems
    - Configure incident detection
 
-4. **Establish incident reporting procedures (Article 62)**
+4. Establish incident reporting procedures (Article 62):
    - Define incident reporting workflows
    - Document escalation procedures
 
