--- a/site/about/use-cases/ss1-23.qmd
+++ b/site/about/use-cases/ss1-23.qmd
@@ -29,19 +29,19 @@ The regulation encourages **proportionate application** based on the size and co
 
 ### Steps
 
-1. **Define model identification criteria**
+1. Define model identification criteria:
 
    - Document what constitutes a model.
    - Establish criteria for inclusion in the MRM framework.
    - Consider edge cases (spreadsheets, vendor models, etc.).
 
-2. **Configure risk classification and tiering fields**
+2. Configure risk classification and tiering fields:
 
    - Set up model tier fields (e.g., Tier 1, 2, 3).
    - Add risk classification categories.
    - Configure validation based on tier.
 
-3. **Document materiality and complexity factors**
+3. Document materiality and complexity factors:
 
    - Establish materiality thresholds.
    - Document complexity assessment criteria.
@@ -60,19 +60,19 @@ The regulation encourages **proportionate application** based on the size and co
 
 ### Steps
 
-1. **Configure Senior Management Function (SMF) accountability**
+1. Configure Senior Management Function (SMF) accountability:
 
    - Document SMF responsibilities for MRM.
    - Configure approval authorities.
    - Establish escalation paths to senior management.
 
-2. **Configure roles and responsibilities**
+2. Configure roles and responsibilities:
 
    - Define roles across three lines of defense.
    - Document responsibilities for each role.
    - Configure permissions accordingly.
 
-3. **Set up board oversight dashboards**
+3. Set up board oversight dashboards:
 
    - Create executive-level dashboards.
    - Configure key risk indicators.
@@ -92,19 +92,19 @@ The regulation encourages **proportionate application** based on the size and co
 
 ### Steps
 
-1. **Configure documentation templates aligned to SS1/23**
+1. Configure documentation templates aligned to SS1/23:
 
    - Select or create templates covering SS1/23 requirements.
    - Include sections for intended purpose and use boundaries.
    - Document development methodology.
 
-2. **Enforce development standards**
+2. Enforce development standards:
 
    - Document coding and development standards.
    - Configure quality gates in workflows.
    - Track compliance with standards.
 
-3. **Document use case and limitations**
+3. Document use case and limitations:
 
    - Clearly state intended use cases.
    - Document known limitations.
@@ -123,19 +123,19 @@ The regulation encourages **proportionate application** based on the size and co
 
 ### Steps
 
-1. **Configure validation workflow for effective challenge**
+1. Configure validation workflow for effective challenge:
 
    - Set up validation initiation workflows.
    - Ensure validator independence.
    - Define validation scope by model tier.
 
-2. **Document objective assessment**
+2. Document objective assessment:
 
    - Use validation report templates.
    - Document testing methodology.
    - Provide clear conclusions.
 
-3. **Implement findings and remediation workflows**
+3. Implement findings and remediation workflows:
 
    - Track validation findings.
    - Assign remediation owners.
@@ -154,19 +154,19 @@ The regulation encourages **proportionate application** based on the size and co
 
 ### Steps
 
-1. **Document controls**
+1. Document controls:
 
    - Identify and document model controls.
    - Link controls to risks mitigated.
    - Track control effectiveness.
 
-2. **Configure monitoring and alerts**
+2. Configure monitoring and alerts:
 
    - Set up ongoing monitoring.
    - Configure performance alerts.
    - Establish response procedures.
 
-3. **Implement change management workflows**
+3. Implement change management workflows:
 
    - Configure model change workflows.
    - Document change approval requirements.
@@ -185,19 +185,19 @@ SS1/23 specifically addresses emerging technologies. {{< var vm.product >}} help
 
 ### Steps
 
-1. **Implement additional controls for complex models**
+1. Implement additional controls for complex models:
 
    - Document enhanced validation requirements for ML models.
    - Implement interpretability documentation.
    - Configure enhanced monitoring.
 
-2. **Address dynamic adjustments and change management**
+2. Address dynamic adjustments and change management:
 
    - Document model update procedures.
    - Implement change tracking for dynamic models.
    - Configure validation triggers for model updates.
 
-3. **Document explainability and transparency**
+3. Document explainability and transparency:
 
    - Assess explainability requirements by model type.
    - Document interpretability approaches.
